<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeyHoop</string>
    <string name="title">HeyHoop</string>
    <string name="provider_name">Data for chart</string>
    <string name="no_entries">Empty</string>
    <string name="chartdroid_download_title">ChartDroid needed</string>
    <string name="chartdroid_download_message">In order to see a chart you need to download ChartDroid application.
    </string>
    <string name="chartdroid_download_market">Market download</string>
    <string name="chartdroid_download_web">Web download</string>
    <string name="dialog_walk_title">Walk</string>
    <string name="dialog_walk_message_running">Walk tracker is running.</string>
    <string name="dialog_walk_message_stopped">Walk tracker is stopped.</string>
    <string name="dialog_walk_start">Start</string>
    <string name="dialog_walk_stop">Stop</string>
    <string name="chart_acceleration_x_axis_label">Time</string>
    <string name="chart_acceleration_y_axis_label">Acceleration magnitude</string>
    <string name="chart_acceleration_title">Last 24h</string>
    <string name="chart_food_x_axis_label">Time</string>
    <string name="chart_food_y_axis_label"></string>
    <string name="chart_food_breakfast_title">Breakfast</string>
    <string name="chart_food_dinner_title">Dinner</string>
    <string name="chart_food_supper_title">Supper</string>
    <string name="chart_drink_x_axis_label">Time</string>
    <string name="chart_drink_y_axis_label">Amount</string>
    <string name="chart_drink_water_title">Water</string>
    <string name="chart_drink_carrot_juice_title">Carrot juice</string>
    <string name="main_menu_food">Food</string>
    <string name="breakfast_item">Breakfast</string>
    <string name="dinner_item">Dinner</string>
    <string name="supper_item">Supper</string>
    <string name="main_menu_drink">Drink</string>
    <string name="water_item">Water</string>
    <string name="carrot_juice_item">Carrot juice</string>
    <string name="main_menu_bed">Bed</string>
    <string name="main_menu_wake">Wake him up</string>
    <string name="main_menu_walk">Walk-meter</string>
    <string name="main_menu_charts">Charts</string>
    <string name="main_menu_walk_entries">Walk entries</string>
    <string name="main_menu_faller">Faller</string>
    <string name="chart_walk">Walk</string>
    <string name="chart_drink">Drink</string>
    <string name="chart_food">Food</string>
    <string name="walk_track_started">Walk-tracking started</string>
    <string name="walk_track_stopped">Walk-tracking stopped</string>
    <string name="breakfast_thanks">I love breakfast!</string>
    <string name="dinner_thanks">What a nice-looking food!</string>
    <string name="supper_thanks">Thank you, I like it!</string>
    <string name="water_thanks">I would dry out without water, thank you!</string>
    <string name="carrot_juice_thanks">Carrot is orange and full of vitamins!</string>
    <string name="unknown_food_thanks">I have never had that but it smells nice.</string>
    <string name="unknown_drink_thanks">What is that? I have never tasted it.</string>
    <string name="bed_thanks">Oh, no! Do I really have to go sleep? It is so early.</string>
    <string name="bed_hello">Good morning! What a beautiful weather I can see.</string>
    <string name="food_wellbeing">Food</string>
    <string name="drink_wellbeing">Drink</string>
    <string name="walk_wellbeing">Walk</string>
    <string name="widget_button_text">Hello!</string>
    <string name="faller_paused_text">Touch to resume</string>
    <string name="faller_title">HeyHoop Faller</string>
    <string name="faller_preferences">Configure</string>
    <string-array name="faller_preference_goal_number_readable">
        <item>Very little (1)</item>
        <item>Pretty little (2)</item>
        <item>Normal (3)</item>
        <item>Many (5)</item>
        <item>Overcrowded (7)</item>
    </string-array>
    <string-array name="faller_preference_goal_number_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>
    <string name="faller_preference_decrease_acceleration_title">Acceleration decrease</string>
    <string name="faller_preference_decrease_acceleration_summary_on">Acceleration is being decreased</string>
    <string name="faller_preference_decrease_acceleration_summary_off">Acceleration is left unchanged</string>
    <string name="faller_preference_goal_number_dialog_title">Edit yellow planes</string>
    <string name="faller_preference_goal_number_title">Yellow planes</string>
    <string name="faller_preference_goal_number_summary">How many yellow planes fly</string>

    <!--This looks stupid. It is because ListPreference does not allow list entries to be different than strings.-->
    <string name="faller_default_goal_number">2</string>

</resources>